<resources>
    <string name="app_name">证件识别</string>
    <!--menu-->
    <string name="nav_menu_idcard">身份证识别</string>
    <string name="nav_menu_history">识别历史</string>
    <string name="nav_menu_settings">设置</string>
    <!--dialog-->
    <string name="dialog_message_loading">请稍后……</string>
    <string name="dialog_title">注意</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <!--导航栏-->
    <string name="drawer_navigation_open">打开导航栏</string>
    <string name="drawer_navigation_close">关闭导航栏</string>
    <!--登录页面-->
    <string name="login_title">用户登录</string>
    <string name="login_username">用户名</string>
    <string name="login_username_empty">请输入用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="login_login">登录</string>
    <!--首页-->
    <string name="main_title">首页</string>
    <!--身份证识别页面-->
    <!--姓名-->
    <string name="idcard_name">姓名：</string>
    <!--身份证号-->
    <string name="idcard_id">身份证号：</string>
    <!--家庭住址-->
    <string name="idcard_address">家庭住址：</string>
    <!--記錄時間-->
    <string name="history_recordDate">扫描时间：</string>
    <!--识别状态-->
    <string name="history_recognitionFlag">识别状态：</string>
    <!--描述-->
    <string name="idcard_desc">描述：</string>
    <!--识别无问题-->
    <string name="recognition_normals">正常人员，无信访记录。</string>
    <!--识别警告-->
    <string name="recognition_alert">警告，该人员被标记为信访人员。</string>
    <!--识别初始化-->
    <string name="recognition_wait">等待识别</string>
    <!--识别错误-->
    <string name="recognition_error">识别错误，请重新识别。</string>
    <!--设备初始化-->
    <string name="device_initial">正在设备初始化，请稍后……</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scan_histroy">扫描历史</string>

    <string name="title_activity_personal_detail">人员详细信息</string>

    <string name="scanHistory_tab_all">全部</string>
    <string name="scanHistory_tab_normal">正常</string>
    <string name="scanHistory_tab_alert">警报</string>

    <string name="historyItem_flag_normal">正常</string>
    <string name="historyItem_flag_alert">被标记</string>

    <!--身份证详情-->
    <string name="detail_name">姓名：</string>
    <string name="detail_gender">性别：</string>
    <string name="detail_nation">民族：</string>
    <string name="detail_birthday">出生年月：</string>
    <string name="detail_address">住址：</string>
    <string name="detail_idcard">身份证号：</string>
    <string name="detail_department">签发机关：</string>
    <string name="detail_validDate">有效期限：</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="date_year">年</string>
    <string name="date_month">月</string>
    <string name="date_day">日</string>

    <string name="record_date">扫描日期：</string>
    <string name="record_isMarked">是否为上访人员：</string>

    <string name="marked_enable">未被标记</string>
    <string name="marked_abled">已被标记为上访人员</string>
</resources>
