<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_default"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_historyItem_header"
        android:layout_width="@dimen/size_header"
        android:layout_height="@dimen/size_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_toEndOf="@+id/iv_historyItem_header"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/padding_small"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idcard_name"
                />
            <TextView
                android:id="@+id/tv_historyItem_name"
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                />
        </LinearLayout>
        <!--身份證號-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:orientation="horizontal">
            <TextView
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idcard_id"
                />
            <TextView
                android:id="@+id/tv_historyItem_cardId"
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                />
        </LinearLayout>

        <!--记录时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:orientation="horizontal">
            <TextView
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_recordDate"
                />
            <TextView
                android:id="@+id/tv_historyItem_recordDate"
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                />
        </LinearLayout>

        <!--记录时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:orientation="horizontal">
            <TextView
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_recognitionFlag"
                />
            <TextView
                android:id="@+id/tv_historyItem_recognitionFlag"
                style="@style/font_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
